# marneo-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  pytest.ini
deploy/: com.marneo.gateway.plist  marneo-gateway.service
docs/: agent-comparison.md  feishu-integration-decision.md
docs/plans/: 2026-04-22-marneo-phase2.md  2026-04-22-marneo-phase3.md  2026-04-22-marneo-phase4.md  2026-04-22-marneo-phase5.md  2026-04-22-team-work-integration.md  2026-04-23-multimodal-file-messages.md  2026-04-23-tool-use.md  2026-04-24-feishu-streaming-card.md  2026-04-24-iteration-plan.md  2026-04-24-memory-system-design.md  2026-04-24-memory-system-impl.md  2026-04-24-phase-b-cleanup.md  2026-04-27-phase-c-feishu.md  2026-04-30-auto-install-and-local-console.md  2026-04-30-feishu-first-setup.md  2026-04-30-local-web-console.md  2026-05-06-agent-loop-stress-test.md  2026-05-06-feishu-mention-self-filter-plan.md
marneo/: __init__.py  __main__.py
marneo/cli/: app.py  employee_feishu_cmd.py  employees_cmd.py  gateway_cmd.py  hire_cmd.py  memory_cmd.py  projects_cmd.py  report_cmd.py  setup_cmd.py  skills_cmd.py  status_cmd.py  team_cmd.py  web_cmd.py  work.py
marneo/collaboration/: coordinator.py  team.py
marneo/core/: config.py  logging_utils.py  paths.py
scripts/: install.sh
tests/: conftest.py  test_config_privacy.py  test_install_script.py  test_readme_privacy.py  test_readme_web_console.py  test_secret_scan_changed_files.py  test_setup_cmd.py  test_stress_safety.py  test_web_console.py
(+123 files in other folders)
